--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,74 +1,74 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+# name: Node.js CI
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
 
-env:
-  PORT: 3000
-  MONGODB_URL: mongodb://127.0.0.1:27017/node-ts-boilerplate
-  JWT_SECRET: thisisasamplesecret
-  JWT_ACCESS_EXPIRATION_MINUTES: 30
-  JWT_REFRESH_EXPIRATION_DAYS: 30
-  JWT_RESET_PASSWORD_EXPIRATION_MINUTES: 10
-  JWT_VERIFY_EMAIL_EXPIRATION_MINUTES: 10
+# env:
+#   PORT: 3000
+#   MONGODB_URL: mongodb://127.0.0.1:27017/node-ts-boilerplate
+#   JWT_SECRET: thisisasamplesecret
+#   JWT_ACCESS_EXPIRATION_MINUTES: 30
+#   JWT_REFRESH_EXPIRATION_DAYS: 30
+#   JWT_RESET_PASSWORD_EXPIRATION_MINUTES: 10
+#   JWT_VERIFY_EMAIL_EXPIRATION_MINUTES: 10
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-        mongodb-version: [4.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+#     strategy:
+#       matrix:
+#         node-version: [14.x]
+#         mongodb-version: [4.0]
+#         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.3.0
-        with:
-          mongodb-version: ${{ matrix.mongodb-version }}
-      - run: yarn
-      - name: Run linting tests
-        run: yarn lint
-      - name: Run unit tests
-        run: yarn test
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#       - name: Start MongoDB
+#         uses: supercharge/mongodb-github-action@1.3.0
+#         with:
+#           mongodb-version: ${{ matrix.mongodb-version }}
+#       - run: yarn
+#       - name: Run linting tests
+#         run: yarn lint
+#       - name: Run unit tests
+#         run: yarn test
 
-  coverage:
-    runs-on: ubuntu-latest
+#   coverage:
+#     runs-on: ubuntu-latest
 
-    needs: test
+#     needs: test
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-        mongodb-version: [4.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+#     strategy:
+#       matrix:
+#         node-version: [14.x]
+#         mongodb-version: [4.0]
+#         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.3.0
-        with:
-          mongodb-version: ${{ matrix.mongodb-version }}
-      - run: yarn
-      - name: Generate coverage
-        run: yarn coverage:coveralls
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          fail_ci_if_error: true
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#       - name: Start MongoDB
+#         uses: supercharge/mongodb-github-action@1.3.0
+#         with:
+#           mongodb-version: ${{ matrix.mongodb-version }}
+#       - run: yarn
+#       - name: Generate coverage
+#         run: yarn coverage:coveralls
+#       - name: Upload coverage to Codecov
+#         uses: codecov/codecov-action@v2
+#         with:
+#           fail_ci_if_error: true
